[FIX] text alignment in tables + [CLEANUP] css

--- a/app/styles/search-results.scss
+++ b/app/styles/search-results.scss
@@ -75,10 +75,10 @@
     width         : 100%;
 
     svg {
-      width: 100%;
-      height: 75%; // Maintaining the 4:3 aspect ratio
       fill: $white;
-      transform: scale(0.5);
+      height: 75%; // Maintaining the 4:3 aspect ratio
+      transform: scale(.5);
+      width: 100%;
     }
   }
   // The actual image
@@ -109,10 +109,10 @@
 
 // Responsive masonry boxes
 .box {
-  transition: box-shadow $anim-default;
   color  : $black;
   display: block;
   padding: $spacer-md $spacer-md $spacer-sm;
+  transition: box-shadow $anim-default;
 
   &:hover,
   &:focus {
@@ -121,6 +121,7 @@
     text-decoration : none;
   }
 
+  // Only target devices with mouse
   @media (pointer:fine) {
     &:hover,
     &:focus {
